fix bug
fix bug jpa